// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<MediaObject> can render without theme 1`] = `
<div
  className="MediaObject__StyledMediaObject-sc-12gs3hz-0 MediaObject-sc-12gs3hz-1 "
>
  <div
    className="MediaObject__Media-sc-12gs3hz-3 "
  >
    media
  </div>
  <div
    className="MediaObject__Body-sc-12gs3hz-2 "
  >
    body
  </div>
</div>
`;

exports[`<MediaObject> customizes the layout with renderLayout node 1`] = `
<div
  className="MediaObject__StyledMediaObject-sc-12gs3hz-0 MediaObject-sc-12gs3hz-1 "
>
  <p>
    custom layout
  </p>
</div>
`;

exports[`<MediaObject> customizes the layout with renderLayout render function 1`] = `
<div
  className="MediaObject__StyledMediaObject-sc-12gs3hz-0 MediaObject-sc-12gs3hz-1 "
>
  <p>
    custom layout
  </p>
</div>
`;
